--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,12 @@
 			<artifactId>flyway-core</artifactId>
 			<version>9.22.3</version>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-models-jakarta</artifactId>
+			<version>2.2.9</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
