--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>swagger-models-jakarta</artifactId>
 			<version>2.2.9</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.4</version> <!-- Use the latest version available -->
+		</dependency>
 	</dependencies>
 
 	<build>
