--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>5.2.4</version> <!-- Use the latest version available -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
