--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,11 @@ management:
 endpoint:
   loggers:
     enabled: true
-
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
 
 spring:
   datasource:
@@ -20,6 +24,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
   sql:
     init:
       username: sa
